--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   riverpod_annotation: ^2.3.5
   uuid: ^4.4.0
   image_picker: ^1.1.2
+  location: ^6.0.2
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
